fix alignment and change section info color

--- a/styles.css
+++ b/styles.css
@@ -54,7 +54,7 @@ body {
   padding: 0;
   border-radius: 4px;
   -moz-border-radius: 4px;
-  margin-top: 20px;
+  margin-top: 30px;
   opacity: 0.5
 }
 .tab-menu{
@@ -98,17 +98,13 @@ body {
   background-color: #000418;
   opacity: 0.4;
   /* border: 1px solid #eeeeee; */
-  padding-left: 20px;
-  padding-top: 10px;
+  padding: 10px;
   height: auto;
+  color: white;
 }
 
 .tab .tab-content:not(.active){
   display: none;
-}
-
-.info-text {
-  opacity: 1.0;
 }
 
 .footer {
